Update Python Script for Network

--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -12,8 +12,8 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -131,7 +131,8 @@
     "                            list_cpu_io = np.array(df_cpu_io['time'].tolist())  \n",
     "\n",
     "                            df_load =  df_load_to_memory.loc[(df_load_to_memory[\"language\"]==language) &\n",
-    "                                                             (df_load_to_memory['taskset']==taskset) &                                                                                       (df_load_to_memory['platform']==platform) &\n",
+    "                                                             (df_load_to_memory['taskset']==taskset) & \n",
+    "                                                             (df_load_to_memory['platform']==platform) &\n",
     "                                                             (df_load_to_memory['nrow']==nrow)]\n",
     "\n",
     "                            list_load = np.array(df_load['time'].tolist())  \n",
@@ -174,12 +175,52 @@
     "\n",
     "\n",
     "  \n",
-    "    return df_final  "
+    "    return df_final  \n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_network(header,baselines, languages, df_run):\n",
+    "    #baseline,language,execution,plan,machineip,time\n",
+    "   \n",
+    "    df_final = pd.DataFrame(columns = header)    \n",
+    "    for baseline in baselines:\n",
+    "        for language in languages:\n",
+    "            df_total =  df_run.loc[(df_run['baseline']==baseline) &\n",
+    "                                   (df_run[\"language\"]==language) &\n",
+    "                                   (df_run['execution']=='Total')\n",
+    "                                    ]\n",
+    "            list_total = np.array(df_total['time'].tolist())  \n",
+    "\n",
+    "            df_io =  df_run.loc[(df_run['baseline']==baseline) &\n",
+    "                                   (df_run[\"language\"]==language) &\n",
+    "                                   (df_run['execution']=='IO')\n",
+    "                                ]\n",
+    "            list_io = np.array(df_io['time'].tolist())  \n",
+    "            if len(list_total) > 0:\n",
+    "                 time_total = calc_mean(list=list_total)    \n",
+    "                 time_io = calc_mean(list=list_io)\n",
+    "                 time_cpu = time_total - time_io\n",
+    "                 base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")\n",
+    "                 result_total = [base,language,'Total',f'{time_total:.2f}']\n",
+    "                 result_cpu = [base,language,'CPU',f'{time_cpu:.2f}']\n",
+    "                 result_io = [base,language,\"IO\",f'{time_io:.2f}']    \n",
+    "               \n",
+    "                 df_final.loc[len(df_final)] = result_total\n",
+    "                 df_final.loc[len(df_final)] = result_cpu\n",
+    "                 df_final.loc[len(df_final)] = result_io  \n",
+    "    return df_final "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,9 +230,11 @@
     "    write_results = [f'{root_path}/Experiment1_Write_times.dat']\n",
     "    read_results = [f'{root_path}/Experiment2_Read_times.dat']                    \n",
     "    load_to_memory_results = [f'{root_path}/Experiment1_LoadToMemory_times.dat']\n",
+    "    network_results = [f'{root_path}/Experiment4_ExternalSort_times.dat']                    \n",
     "   \n",
-    "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]   \n",
+    "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
     "    load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
+    "    network_header = [\"baseline\",\"language\",\"execution\",\"time\"]  \n",
     "\n",
     "    baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
     "                \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
@@ -199,7 +242,7 @@
     "\n",
     "     \n",
     "    \n",
-    "    nrows = [5000000,4000000,3000000,2000000,1000000]\n",
+    "    nrows = [10000000,8000000,6000000,4000000,2000000]\n",
     "\n",
     "    executions = [\"CPU\", \"IO\", \"Total\"]\n",
     "    platforms  = [\"Parallel\", \"Single\"] #\n",
@@ -207,19 +250,24 @@
     "    languages  = [\"Java\", \"CPP\",\"Rust\"]\n",
     "    tasksets   = [True, False]\n",
     "\n",
-    "    df_write = merge_results(write_results)    \n",
-    "    df_read = merge_results(read_results)\n",
-    "    df_load = merge_results(load_to_memory_results)   \n",
+    "    #df_write = merge_results(write_results)    \n",
+    "    #df_read = merge_results(read_results)\n",
+    "    #df_load = merge_results(load_to_memory_results)   \n",
+    "    df_network = merge_results(network_results)   \n",
     "   \n",
-    "    df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
-    "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\n",
+    "    #df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
+    "    #                                  seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\n",
     "\n",
-    "    df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
-    "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \n",
+    "    #df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
+    "    #                                  seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \n",
+    "\n",
+    "    df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
+    "\n",
     "\n",
     "                            \n",
-    "    df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \n",
-    "    df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)                \n",
+    "    #df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \n",
+    "    #df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)\n",
+    "    df_network_final.to_csv(\"results/Exp4_network.dat\", index=False)                \n",
     "  \n",
     "\n",
     "\n",
@@ -228,9 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'total' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results()\n",
+      "Cell \u001b[0;32mIn [6], line 38\u001b[0m, in \u001b[0;36mresults\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m df_network \u001b[39m=\u001b[39m merge_results(network_results)   \n\u001b[1;32m     32\u001b[0m \u001b[39m#df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[39m#                                  seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \n\u001b[1;32m     35\u001b[0m \u001b[39m#df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[39m#                                  seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m df_network_final \u001b[39m=\u001b[39m calc_network(header\u001b[39m=\u001b[39;49mnetwork_header, baselines\u001b[39m=\u001b[39;49mbaselines, languages\u001b[39m=\u001b[39;49mlanguages, df_run\u001b[39m=\u001b[39;49mdf_network)\n\u001b[1;32m     42\u001b[0m \u001b[39m#df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \u001b[39;00m\n\u001b[1;32m     43\u001b[0m \u001b[39m#df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)\u001b[39;00m\n\u001b[1;32m     44\u001b[0m df_network_final\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39mresults/Exp4_network.dat\u001b[39m\u001b[39m\"\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn [5], line 23\u001b[0m, in \u001b[0;36mcalc_network\u001b[0;34m(header, baselines, languages, df_run)\u001b[0m\n\u001b[1;32m     21\u001b[0m time_cpu \u001b[39m=\u001b[39m time_total \u001b[39m-\u001b[39m time_io\n\u001b[1;32m     22\u001b[0m base \u001b[39m=\u001b[39m baseline\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39mFlatBuffersJava\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFlatBufJava\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 23\u001b[0m result_total \u001b[39m=\u001b[39m [base,language,\u001b[39m'\u001b[39m\u001b[39mTotal\u001b[39m\u001b[39m'\u001b[39m,\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mtotal\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m]\n\u001b[1;32m     24\u001b[0m result_cpu \u001b[39m=\u001b[39m [base,language,\u001b[39m'\u001b[39m\u001b[39mCPU\u001b[39m\u001b[39m'\u001b[39m,\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcpu\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m]\n\u001b[1;32m     25\u001b[0m result_io \u001b[39m=\u001b[39m [base,language,\u001b[39m\"\u001b[39m\u001b[39mIO\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mio\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m]    \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'total' is not defined"
+     ]
+    }
+   ],
    "source": [
     "results()"
    ]
