Add Network Plot

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -176,12 +176,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment1: Write times for 5M Tweet Objects (parallel)}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp2_seq_read_single}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_seq_read_single}
-        \caption{Experiment2: Sequential Read times for 5M Tweet Objects (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_seq_read_single}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_seq_read_single}
+%         \caption{Experiment2: Sequential Read times for 5M Tweet Objects (Single)}
+% \end{figure*}
 
 % \tikzsetnextfilename{Exp2_seq_read_parallel}
 %     \begin{figure*}[h]
@@ -226,6 +226,13 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \input{figures/Exp4_legend}
 %         \caption{Experiment4: (legend)}
 % \end{figure*}
+
+\tikzsetnextfilename{Exp5_network}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp5_network}
+        \caption{Experiment5: (Network)}
+\end{figure*}
 
 
 \maketitle
