--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -11,8 +11,8 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,8 +204,8 @@
     "                                ]\n",
     "            list_io = np.array(df_io['time'].tolist())  \n",
     "            if len(list_total) > 0:\n",
-    "                 time_total = calc_mean(list=list_total)    \n",
-    "                 time_io = calc_mean(list=list_io)\n",
+    "                 time_total = calc_mean(list=list_total) / 60    \n",
+    "                 time_io = calc_mean(list=list_io) / 60\n",
     "                 time_cpu = time_total - time_io\n",
     "                 base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")\n",
     "                 result_total = [base,language,'Total',f'{time_total:.2f}']\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
     "                            \n",
     "    #df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \n",
     "    #df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)\n",
-    "    df_network_final.to_csv(\"results/Exp4_network.dat\", index=False)                \n",
+    "    df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)                \n",
     "  \n",
     "\n",
     "\n",
@@ -276,23 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'total' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results()\n",
-      "Cell \u001b[0;32mIn [6], line 38\u001b[0m, in \u001b[0;36mresults\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m df_network \u001b[39m=\u001b[39m merge_results(network_results)   \n\u001b[1;32m     32\u001b[0m \u001b[39m#df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[39m#                                  seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \n\u001b[1;32m     35\u001b[0m \u001b[39m#df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[39m#                                  seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m df_network_final \u001b[39m=\u001b[39m calc_network(header\u001b[39m=\u001b[39;49mnetwork_header, baselines\u001b[39m=\u001b[39;49mbaselines, languages\u001b[39m=\u001b[39;49mlanguages, df_run\u001b[39m=\u001b[39;49mdf_network)\n\u001b[1;32m     42\u001b[0m \u001b[39m#df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \u001b[39;00m\n\u001b[1;32m     43\u001b[0m \u001b[39m#df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)\u001b[39;00m\n\u001b[1;32m     44\u001b[0m df_network_final\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39mresults/Exp4_network.dat\u001b[39m\u001b[39m\"\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "Cell \u001b[0;32mIn [5], line 23\u001b[0m, in \u001b[0;36mcalc_network\u001b[0;34m(header, baselines, languages, df_run)\u001b[0m\n\u001b[1;32m     21\u001b[0m time_cpu \u001b[39m=\u001b[39m time_total \u001b[39m-\u001b[39m time_io\n\u001b[1;32m     22\u001b[0m base \u001b[39m=\u001b[39m baseline\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39mFlatBuffersJava\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFlatBufJava\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 23\u001b[0m result_total \u001b[39m=\u001b[39m [base,language,\u001b[39m'\u001b[39m\u001b[39mTotal\u001b[39m\u001b[39m'\u001b[39m,\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mtotal\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m]\n\u001b[1;32m     24\u001b[0m result_cpu \u001b[39m=\u001b[39m [base,language,\u001b[39m'\u001b[39m\u001b[39mCPU\u001b[39m\u001b[39m'\u001b[39m,\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcpu\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m]\n\u001b[1;32m     25\u001b[0m result_io \u001b[39m=\u001b[39m [base,language,\u001b[39m\"\u001b[39m\u001b[39mIO\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mio\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m]    \n",
-      "\u001b[0;31mNameError\u001b[0m: name 'total' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results()"
    ]
