Add Extenalsort Plot

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -235,6 +235,14 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 \end{figure*}
 
 
+\tikzsetnextfilename{Exp4_externalsort}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp4_externalsort}
+        \caption{Experiment4: (Externalsort)}
+\end{figure*}
+
+
 \maketitle
 \IEEEdisplaynontitleabstractindextext
 \IEEEpeerreviewmaketitle
