--- a/Experiments/plot/figures/Exp5_network.tex
+++ b/Experiments/plot/figures/Exp5_network.tex
@@ -57,7 +57,7 @@
 		]
 		\resetstackedplots	
 		\myaddplot{0}{#2}{IO}{#2}{none}{I/O Time(taskset True)}{#1};
-  		\myaddplotnan{0}{#2!20}{CPU}{#2!20}{north east lines}{CPU Time(taskset True)}{#1}{#2};
+  		\myaddplotnan{0}{#2!25}{CPU}{#2!25}{north east lines}{CPU Time(taskset True)}{#1}{#2};
 		\myaddplots{0}{white}{Total}{none}{#1};
    };     
 
@@ -136,7 +136,7 @@
 		ymax=1000,		
 		scaled y ticks=false,		  
 		enlarge y limits={0.17,upper},		
-		ylabel={Execution Time[minute]},		   
+		ylabel={Execution Time[min]},		   
 		ytick align=inside,
 		xtick align=outside,			
 		xtick pos=left,
