--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,8 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_externalsort(header,baselines,tasksets, languages, df_run):\n",
+    "   # baseline,language,taskset,execution,chunk_size,nrow,time\n",
+    "   \n",
+    "    df_final = pd.DataFrame(columns = header)    \n",
+    "    for baseline in baselines:\n",
+    "        for language in languages:\n",
+    "            for taskset in tasksets:\n",
+    "                df_total =  df_run.loc[(df_run['baseline']==baseline) &\n",
+    "                                       (df_run[\"language\"]==language) &\n",
+    "                                       (df_run[\"taskset\"]==taskset) &\n",
+    "                                       (df_run['execution']=='Total')\n",
+    "                                        ]\n",
+    "                list_total = np.array(df_total['time'].tolist())  \n",
+    "\n",
+    "                df_io =  df_run.loc[(df_run['baseline']==baseline) &\n",
+    "                                    (df_run[\"language\"]==language) &\n",
+    "                                    (df_run[\"taskset\"]==taskset) &\n",
+    "                                    (df_run['execution']=='IO')\n",
+    "                                    ]\n",
+    "                list_io = np.array(df_io['time'].tolist())  \n",
+    "                if len(list_total) > 0:\n",
+    "                    time_total = calc_mean(list=list_total) / 60    \n",
+    "                    time_io = calc_mean(list=list_io) / 60\n",
+    "                    time_cpu = time_total - time_io\n",
+    "                    base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")\n",
+    "                    result_total = [base,language,taskset,'Total',1000000,15000000,f'{time_total:.2f}']\n",
+    "                    result_cpu = [base,language,taskset,'CPU',1000000,15000000,f'{time_cpu:.2f}']\n",
+    "                    result_io = [base,language,taskset,\"IO\",1000000,15000000,f'{time_io:.2f}']    \n",
+    "                \n",
+    "                    df_final.loc[len(df_final)] = result_total\n",
+    "                    df_final.loc[len(df_final)] = result_cpu\n",
+    "                    df_final.loc[len(df_final)] = result_io  \n",
+    "    return df_final "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,11 +271,13 @@
     "    write_results = [f'{root_path}/Experiment1_Write_times.dat']\n",
     "    read_results = [f'{root_path}/Experiment2_Read_times.dat']                    \n",
     "    load_to_memory_results = [f'{root_path}/Experiment1_LoadToMemory_times.dat']\n",
-    "    network_results = [f'{root_path}/Experiment4_ExternalSort_times.dat']                    \n",
+    "    network_results = [f'{root_path}/Experiment4_ExternalSort_times.dat'] \n",
+    "    externalsort_results = [f'{root_path}/Experiment3b_ExternalSort_times.dat']                   \n",
     "   \n",
     "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
     "    load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
     "    network_header = [\"baseline\",\"language\",\"execution\",\"time\"]  \n",
+    "    externalsort_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"chunk_size\",\"nrow\",\"time\"]  \n",
     "\n",
     "    baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
     "                \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
@@ -253,7 +296,8 @@
     "    #df_write = merge_results(write_results)    \n",
     "    #df_read = merge_results(read_results)\n",
     "    #df_load = merge_results(load_to_memory_results)   \n",
-    "    df_network = merge_results(network_results)   \n",
+    "    #df_network = merge_results(network_results)   \n",
+    "    df_externalsort = merge_results(externalsort_results)   \n",
     "   \n",
     "    #df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
     "    #                                  seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\n",
@@ -261,13 +305,14 @@
     "    #df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
     "    #                                  seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \n",
     "\n",
-    "    df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
+    "    #df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
     "\n",
-    "\n",
+    "    df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
     "                            \n",
     "    #df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \n",
     "    #df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)\n",
-    "    df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)                \n",
+    "    #df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
+    "    df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
     "  \n",
     "\n",
     "\n",
@@ -276,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
