Add Complex Objects

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -162,6 +162,14 @@
 Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 \end{IEEEkeywords}}
 
+\tikzsetnextfilename{Exp0_benchmark}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp0_benchmark}
+        \caption{Benchmark}
+\end{figure*}
+
+
 % \tikzsetnextfilename{Exp1_write_single}
 %     \begin{figure*}[h]
 %         \centering
@@ -227,20 +235,20 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment4: (legend)}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp5_network}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp5_network}
-        \caption{Experiment5: (Network)}
-\end{figure*}
+% \tikzsetnextfilename{Exp5_network}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp5_network}
+%         \caption{Experiment5: (Network)}
+% \end{figure*}
 
 
-\tikzsetnextfilename{Exp4_externalsort}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp4_externalsort}
-        \caption{Experiment4: (Externalsort)}
-\end{figure*}
+% \tikzsetnextfilename{Exp4_externalsort}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp4_externalsort}
+%         \caption{Experiment4: (Externalsort)}
+% \end{figure*}
 
 
 \maketitle
